--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 spring.datasource.url=jdbc:mysql://localhost:3306/liftoff_project
 spring.datasource.username=liftoff_project
-spring.datasource.password=Learn2code!
+spring.datasource.password=liftoff_project
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
